--- a/main.tex
+++ b/main.tex
@@ -13,7 +13,7 @@
 % Start Minipages
 \vspace*{3.49cm}% start 8 cm from the top of the page}
     \adjustbox{valign=t}{\begin{minipage}{7.3cm} % large 7.4 cm from the top
-    \vspace*{1.2cm} % text starts 1cm under the top of the minipage
+    \vspace*{1.2cm} % text starts 1cm under the top of the mPnipage
             
         % Picture
         \begin{center}
